Widgets: Min-height to avoid image clipping.

--- a/app/assets/stylesheets/widgets/widgets.css.less
+++ b/app/assets/stylesheets/widgets/widgets.css.less
@@ -127,6 +127,7 @@ footer {
 .positions {
   .position {
     padding-left: @gutter;
+    min-height: 60px;
     margin: 20px 0;
     background: transparent -5px 10px no-repeat;
     &.for {
